# f1-polymarket-lab

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Makefile  README.md  alembic.ini  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  run_backtest_2gp.py  turbo.json
.github/workflows/: ci.yml
apps/api/: pyproject.toml
apps/api/src/f1_polymarket_api/: dependencies.py  main.py  schemas.py
apps/api/src/f1_polymarket_api/api/v1/: action_routes.py  routes.py
apps/web/: next.config.ts  package.json  tailwind.config.ts  tsconfig.json
apps/web/src/app/: globals.css  layout.tsx  loading.tsx  page.tsx
apps/web/src/app/_components/: action-button.tsx  backtest-actions.tsx  backtest-table-section.tsx  dashboard-actions.test.tsx  dashboard-actions.tsx  data-table.tsx  driver-affinity-summary.test.tsx  driver-affinity-summary.tsx  empty-state.tsx  ensemble-backtest-section.tsx  ensemble-summary-panel.test.tsx  ensemble-summary-panel.tsx  header.tsx  lineage-auto-refresh.test.tsx  lineage-auto-refresh.tsx  lineage-table-section.test.tsx  lineage-table-section.tsx  market-ensemble-panel.test.tsx  market-ensemble-panel.tsx  markets-table-section.tsx  meeting-refresh-button.test.tsx  meeting-refresh-button.tsx  predictions-table-section.tsx  session-timeline.test.tsx  session-timeline.tsx  sessions-table-section.tsx  sidebar.test.tsx  sidebar.tsx  signal-correlation-grid.tsx  status-indicator.tsx  weekend-cockpit-panel.test.tsx  (+1 more)
apps/web/src/components/: page-status-banner.test.tsx  page-status-banner.tsx
apps/web/src/lib/: action-defaults.test.ts  action-defaults.ts  backtest-metrics.test.ts  backtest-metrics.ts  calibration.test.ts  calibration.ts  display.test.ts  display.ts  driver-affinity.ts  resource-state.test.ts  resource-state.ts  route-param.test.ts  schedule.test.ts  schedule.ts  session-refresh.ts
apps/worker/: pyproject.toml
apps/worker/src/f1_polymarket_worker/: backtest.py  cli.py  demo_ingest.py  driver_affinity.py  f1_backfill.py  gp_registry.py  historical.py  job_queue.py  lineage.py  live_trading.py  market_discovery.py  model_registry.py  model_workflow.py  multitask_snapshot.py  ops_calendar.py  ops_support.py  orchestration.py  paper_trading.py  pipeline.py  quicktest.py  signal_ensemble.py  weekend_ops.py
apps/worker/src/f1_polymarket_worker/pipeline/: __init__.py  context.py  f1_sync.py  polymarket_sync.py
db/alembic/: env.py
db/alembic/versions/: 20260318_0001_baseline.py  20260318_0002_operational_ingestion.py  20260320_0003_f1_timing_semantics.py  20260320_0004_widen_data_quality_ids.py  20260320_0005_widen_data_quality_result_ids.py  20260320_0006_force_widen_data_quality_result_id.py  20260324_0007_paper_trade_tables.py  20260325_0007_add_relational_guards.py  20260325_0008_merge_heads.py  20260325_0009_widen_feature_registry_id.py  20260407_0010_model_run_promotions.py  20260407_0011_live_trade_tables.py  20260408_0012_ops_calendar_overrides.py  20260408_0013_signal_ensemble_tables.py  20260425_0014_ingestion_queue_controls.py  20260621_0015_widen_mapping_ids.py
db/ddl/: schema-overview.md
docs/: index.md
docs/adr/: 0001-monorepo-architecture.md
docs/architecture/: overview.md
docs/data-dictionary/: core-tables.md
docs/engineering/: commit-convention.md
docs/modeling/: signal-ensemble.md
docs/research/: 2026-chinese-grand-prix-validation.md  2026-multitask-walk-forward-q-r.md
docs/superpowers/specs/: 2026-03-27-multi-checkpoint-qr-autoresearch-design.md
docs/workflows/: operations.md
infra/compose/: local.yml
py/agent/: pyproject.toml
py/common/: pyproject.toml
py/common/src/f1_polymarket_lab/common/: __init__.py  markets.py  settings.py  timing.py  utils.py
py/connectors/: pyproject.toml
py/connectors/src/f1_polymarket_lab/connectors/: __init__.py  base.py  collector.py  f1db.py  fastf1_adapter.py  jolpica.py  openf1.py  openf1_live.py  polymarket.py  polymarket_live.py  taxonomy.py
py/experiments/: pyproject.toml
py/experiments/src/f1_polymarket_lab/experiments/: __init__.py  autoresearch.py  tracking.py
py/features/: pyproject.toml
py/features/src/f1_polymarket_lab/features/: __init__.py  compute.py  driver_profile.py  h2h.py  registry.py
py/models/: pyproject.toml
py/models/src/f1_polymarket_lab/models/: __init__.py  calibration.py  lgbm_trainer.py  multitask_model.py  multitask_trainer.py  signal_ensemble.py  stages.py  tuner.py  xgb_trainer.py
py/storage/: pyproject.toml
py/storage/src/f1_polymarket_lab/storage/: __init__.py  db.py  lake.py  migrations.py  models.py  repository.py
py/tests/: conftest.py  test_api_routes.py  test_autoresearch.py  test_backtest.py  test_cli.py  test_driver_affinity.py  test_f1db_connector.py  test_gp_registry_fp2.py  test_historical.py  test_job_queue.py  test_lgbm_trainer.py  test_live_trading.py  test_model_registry.py  test_model_workflow.py  test_multitask_snapshot.py  test_multitask_trainer.py  test_openf1_connector.py  test_ops_calendar.py  test_orchestration.py  test_postgres_api_routes.py  test_postgres_relational_integrity.py  test_postgres_repository.py  test_postgres_signal_ensemble_api.py  test_quicktest.py  test_relational_integrity.py  test_repository.py  test_signal_ensemble.py  test_signal_ensemble_api.py  test_sqlite_to_postgres_migration.py  test_stateful_backtest.py  test_taxonomy.py  test_timing_semantics.py  test_xgb_trainer.py
scripts/: capture_austrian_2026.sh
scripts/bootstrap/: install-libomp.sh
scripts/bootstrap/cmake/: ExtendPath.cmake
scripts/launchd/: com.f1lab.capture-austrian-q.plist  com.f1lab.capture-austrian-r.plist
skills/change-finalizer/: SKILL.md
skills/f1-data-platform/: SKILL.md
skills/f1-modeling-backtest/: SKILL.md
skills/f1-web-api-lab/: SKILL.md
skills/research-reporting/: SKILL.md
src/f1_polymarket_lab_root/: __init__.py
tests/: test_api_health.py  test_historical.py  test_lake.py  test_openf1_connector.py  test_orchestration.py  test_pipeline_plan.py  test_quicktest.py  test_taxonomy.py  test_timing_semantics.py  test_xgb_trainer.py
(+21 files in other folders)
