[build-system]
requires = ["setuptools>=75.8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "f1-polymarket-common"
version = "0.1.0"
requires-python = ">=3.10,<3.13"
dependencies = [
  "pydantic>=2.10.6",
  "pydantic-settings>=2.8.1"
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true
