[build-system]
requires = ["setuptools>=75.8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "f1-polymarket-storage"
version = "0.1.0"
requires-python = ">=3.10,<3.13"
dependencies = [
  "f1-polymarket-common",
  "polars>=1.24.0",
  "psycopg[binary]>=3.2.6",
  "pyarrow>=19.0.1",
  "sqlalchemy>=2.0.38"
]

[tool.uv.sources]
f1-polymarket-common = { workspace = true }

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true
